--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,11 +3,8 @@
         "target": "es5",
         "module": "commonjs",
         "outDir": "./dist",
-        "rootDir": "./src",
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "baseUrl": "./src",
-        "allowJs": true,
+        "rootDir": "./",
+        "baseUrl": "./src/",
         "paths": {
             "@modules/*": [
                 "modules/*"
@@ -17,12 +14,16 @@
             ],
             "@shared/*": [
                 "shared/*"
+            ],
+            "@utils/*": [
+                "utils/*"
             ]
         },
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true
     }
 }
