--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
     "main": "index.js",
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
-        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli"
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli",
+        "test": "jest"
     },
     "license": "MIT",
     "dependencies": {
@@ -14,11 +15,13 @@
         "pg": "^8.6.0",
         "reflect-metadata": "^0.1.13",
         "tsyringe": "^4.5.0",
-        "typeorm": "^0.2.32"
+        "typeorm": "^0.2.32",
+        "ts-jest": "^26.5.6"
     },
     "devDependencies": {
         "@types/cors": "^2.8.10",
         "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.23",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "eslint": "^7.25.0",
@@ -28,6 +31,7 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-import-helpers": "^1.1.0",
         "eslint-plugin-prettier": "^3.4.0",
+        "jest": "^26.6.3",
         "prettier": "^2.2.1",
         "ts-node-dev": "^1.1.6",
         "typescript": "^4.2.4"
